--- a/works/page-nef.html
+++ b/works/page-nef.html
@@ -29,7 +29,7 @@
     <style>
         .left .m-banner {
             width: 100%;
-            height: 91vh;
+            height: 110vh;
             text-indent: -999999px;
             background: url(./images/nef1.png) no-repeat 50% 80px / 100%;
         }
@@ -133,11 +133,11 @@
                 <div class="wrapper1">
                     <ul class="skill">
                         <li class="title">Skills</li>
-                        <li>Photoshop / illustration</li>
-                        <li>graphics / Editing</li>
+                        <li class="titleUp">Photoshop / illustration</li>
+                        <li class="titleUp">graphics / Editing</li>
                     </ul>
 
-                    <ul class="tool">
+                    <ul class=" tool">
                         <li class="title">Tools</li>
                         <li>
                             <ul class="img">
