page-story.html 작성

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <div class="js-flickity-slider">
 
                         <div class="js-carousel-cell cell01">
-                            <a href="#">
+                            <a href="https://leejihi.github.io/jihee/works/page-nef">
                                 <div class="ag-shop-card_box-wrap">
                                     <div class="ag-shop-card_box">
                                         <div class="ag-shop-card_body">
@@ -191,8 +191,8 @@
                                             <div class="ag-shop-card-footer_link"><img
                                                     src="https://rawcdn.githack.com/SochavaAG/example-mycode/master/pens/parallax-swipe/images/arrow.svg"
                                                     class="ag-shop-card-footer_arrow"></div>
-                                            <span class="ag-shop-card-footer_title">NEBLAB | 박람회 </span>
-                                            <span class="ag-shop-card-footer_products">리플렛, 포스터, 부스디자인</span>
+                                            <span class="ag-shop-card-footer_title">NEBLAB | 신기술박람회 </span>
+                                            <span class="ag-shop-card-footer_products">네프랩 PEO 리플렛</span>
                                         </div>
                                     </div>
                                 </div>
@@ -201,7 +201,7 @@
                         </div>
 
                         <div class="js-carousel-cell cell02">
-                            <a href="#">
+                            <a href="https://leejihi.github.io/jihee/works/page-ebg">
                                 <div class="ag-shop-card_box-wrap">
                                     <div class="ag-shop-card_box">
                                         <div class="ag-shop-card_body">
@@ -217,7 +217,7 @@
                                                     src="https://rawcdn.githack.com/SochavaAG/example-mycode/master/pens/parallax-swipe/images/arrow.svg"
                                                     class="ag-shop-card-footer_arrow"></div>
                                             <span class="ag-shop-card-footer_title">E.B.G | 브랜딩</span>
-                                            <span class="ag-shop-card-footer_products">로고, 캐릭터, 전단, 공책, 랩핑 </span>
+                                            <span class="ag-shop-card-footer_products">로고, 캐릭터, 인쇄디자인</span>
                                         </div>
                                     </div>
                                 </div>
