--- a/works/page-story.html
+++ b/works/page-story.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>E.B.G 영어</title>
+    <title>Pancakes Original Story</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="../common/favicon/favicon.ico" type="image/x-icon">
@@ -14,10 +14,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../common/favicon/favicon-16x16.png">
 
     <!-- og  -->
-    <meta property="og:title" content="E.B.G Branding">
-    <meta property="og:description" content="E.B.G 영어교습소 브랜딩">
-    <meta property="og:image" content="https://leejihi.github.io/jihee/works/images/ebg_og.png">
-    <meta property="og:url" content="https://leejihi.github.io/jihee/works/page-ebg">
+    <meta property="og:title" content="Pancakes Original Story">
+    <meta property="og:description" content="팬케익 오리지널 스토리 인쇄디자인">
+    <meta property="og:image" content="https://leejihi.github.io/jihee/works/images/story_og.png">
+    <meta property="og:url" content="https://leejihi.github.io/jihee/works/page-story">
 
     <!-- reset -->
     <link rel="stylesheet" href="../common/reset.css">
@@ -31,12 +31,11 @@
             width: 100%;
             height: 95vh;
             text-indent: -999999px;
-            background: url(./images/ebg1.png) no-repeat 50% 80px / 100%;
+            background: url(./images/story1.gif) no-repeat 50% 80px / 100%;
         }
 
-        .left .m-img img:nth-child(2),
-        .left .m-img img:nth-child(3),
         .left .m-img img:nth-child(4) {
+            margin-top: 10vw;
             margin-bottom: 3vw;
         }
     </style>
@@ -71,7 +70,7 @@
         </div>
 
         <div class="sub-nav">
-            <p>Works<span class="nomarl"> > Branding</span></p>
+            <p>Works<span class="nomarl"> > Printing</span></p>
             <div class="sub-btn">
                 <div class="open-btn">Contact</div>
                 <img src="../images/contact.png" alt="컨텍 말주머니">
@@ -96,14 +95,14 @@
     <main>
         <!-- 메인 왼쪽 영역 -->
         <section class="left">
-            <div class="m-banner">이비지 영어 키비주얼</div>
+            <div class="m-banner">팬케익 오리지널 스토리 키비주얼</div>
 
             <div class="m-img">
-                <img src="./images/ebg2.png" alt="이비지 영어 교습소 로고">
-                <img src="./images/ebg3.png" alt="이비지 영어 교습소 캐릭터, 컬러 설명, 로고가 적용된 명함 이미지">
-                <img src="./images/ebg4.png" alt="이비지 영어 교습소 오픈 전단지">
-                <img src="./images/ebg5.png" alt="이비지 영어 교습소 오픈 전단지">
-                <img src="./images/ebg6.png" alt="이비지 영어 교습소 인테리어 랩핑">
+                <img src="./images/story2.png" alt="팬케익 오리지널 스토리 앞치마를 입은 사람과 팬케익">
+                <img src="./images/story3.png" alt="팬케익 오리지널 스토리의 버터밀크 패키지, 도안, 매장에 디피된 이미지">
+                <img src="./images/story4.png" alt="팬케익 오리지널 스토리 시즌메뉴 포스터, 메뉴판, 상품권 이미지">
+                <img src="./images/story5.png" alt="팬케익 오리지널 스토리 한남동 본점 사진과 메뉴사진">
+
             </div>
         </section>
 
@@ -111,19 +110,18 @@
         <section class="right">
             <div class="r-wrapper">
                 <div class="wrapper1">
-                    <p class="titleUp">Branding</p>
-                    <h4 class="titleUp">e.b.g 영어 교습소</h4>
-                    <p>E.B.G는 Express yourself, Be active, Gain more의 약자로
-                        <span class="block">영어로 나의 생각과 상상력을 표현할 수 있도록 아이 스스로가</span>
-                        <span class="block">게임을 하듯 영어를 익힐 수 있도록 돕는 교육커리큘럼을 갖고있는</span>
-                        <span class="block">영어 브랜드입니다. 아이를 닮은 둥근 느낌과 원색 색감을 살려</span>
-                        로고, 캐릭터, 인쇄디자인을 진행했습니다.
+                    <p class="titleUp">Printing</p>
+                    <h4 class="titleUp">팬케익 오리지널 스토리</h4>
+                    <p>국내 브런치 시장을 개척한 정통 미국가정식 레스토랑입니다.
+                        <span class="block">70년대 미국스타일의 디자인을 모티브로 올드, 빈티지함을 추구하며</span>
+                        <span class="block">브랜드의 정체성을 만들어가고 있습니다. 브랜드 무드를 살려 기획부터</span>
+                        사진, 일러스트, 메뉴판, 시즌포스터, 패키지 작업을 진행했습니다.
                     </p>
 
                     <div class="txt">
-                        <p><span class="bold">PROJECT</span>브랜드 런칭 / 작업기여도 100%</p>
-                        <p><span class="bold">작업일정</span>2023.01 ~ 2023.02</p>
-                        <p class="titleUp"><span class="bold">CONCEPT</span>#colorful #Round</p>
+                        <p><span class="bold">PROJECT</span>인쇄디자인 / 작업기여도 100%</p>
+                        <p><span class="bold">작업일정</span>2014.04 ~ 2015.03</p>
+                        <p class="titleUp"><span class="bold">CONCEPT</span>#Sketch #Vintage #illustration</p>
                     </div>
                 </div>
 
@@ -135,8 +133,8 @@
                 <div class="wrapper1">
                     <ul class="skill">
                         <li class="title">Skills</li>
-                        <li class="titleUp">Photoshop / illustration</li>
-                        <li class="titleUp">graphics / Editing</li>
+                        <li class="titleUp">Photoshop / illustration / Hand Drawing </li>
+                        <li class="titleUp">graphics / Editing / 사진촬영</li>
                     </ul>
 
                     <ul class=" tool">
