page-rollyshube.html 작성

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
             <div class="myWeb1">
                 <div class="web web1">
-                    <a href="#">
+                    <a href="https://leejihi.github.io/jihee/works/page-kt">
                         <div class="web-txt">
                             <h3>kt wiz</h3>
                             <p>PRINTING</p>
@@ -162,7 +162,7 @@
                     </a>
                 </div>
                 <div class="web web2">
-                    <a href="#"></a>
+                    <a href="https://leejihi.github.io/jihee/works/page-rollyshube"></a>
                     <div class="web-txt">
                         <h3>ROLLY SHUBE</h3>
                         <p>PRINTING</p>
@@ -251,7 +251,7 @@
                         </div>
 
                         <div class="js-carousel-cell cell04">
-                            <a href="#">
+                            <a href="https://leejihi.github.io/jihee/works/page-story">
                                 <div class="ag-shop-card_box-wrap">
                                     <div class="ag-shop-card_box">
                                         <div class="ag-shop-card_body">
@@ -267,7 +267,7 @@
                                                     src="https://rawcdn.githack.com/SochavaAG/example-mycode/master/pens/parallax-swipe/images/arrow.svg"
                                                     class="ag-shop-card-footer_arrow"></div>
                                             <span class="ag-shop-card-footer_title">팬케익 오리지널 스토리 | Printing </span>
-                                            <span class="ag-shop-card-footer_products">메뉴판, 시즌 포스터</span>
+                                            <span class="ag-shop-card-footer_products">인쇄디자인</span>
                                         </div>
                                     </div>
                                 </div>
