page-kt.html 작성

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         </div>
 
                         <div class="js-carousel-cell cell03">
-                            <a href="#">
+                            <a href="https://leejihi.github.io/jihee/works/page-wox">
                                 <div class="ag-shop-card_box-wrap">
                                     <div class="ag-shop-card_box">
                                         <div class="ag-shop-card_body">
