page-ebg, kt, rollyshube 1200px까지 미디어쿼리 메인배너 높이 수정

--- a/works/page-ebg.html
+++ b/works/page-ebg.html
@@ -39,6 +39,13 @@
         .left .m-img img:nth-child(4) {
             margin-bottom: 3vw;
         }
+
+        /* 미디어쿼리 1200까지 */
+        @media screen and (max-width: 1200px) {
+            .left .m-banner {
+                height: 90vh;
+            }
+        }
     </style>
 </head>
 
