--- a/works/page-rollyshube.html
+++ b/works/page-rollyshube.html
@@ -33,6 +33,13 @@
             text-indent: -999999px;
             background: url(./images/ro1.png) no-repeat 50% 80px / 100%;
         }
+
+        /* 미디어쿼리 1200까지 */
+        @media screen and (max-width: 1200px) {
+            .left .m-banner {
+                height: 90vh;
+            }
+        }
     </style>
 </head>
 
