--- a/about/about.html
+++ b/about/about.html
@@ -108,7 +108,7 @@
                     <p>안녕하세요.<span class="block">현재도 성장하고 있는 <span class="under">디자이너 이지희</span>입니다.</span></p>
                     <p>저에게 디자인은 세상에 말하는 도구이자<span class="block">누군가의 꿈의 형태입니다.
                         </span></p>
-                    <p><span class="under">퍼블리싱, 브랜딩, 일러스트, 편집, 영상</span> 등
+                    <p><span class="under">편집능력을 기반으로 인쇄, 패키지, 영상</span> 등
                         다양한 도구로 <span class="block">눈에 보이지 않는 기업, 브랜드, 상품의 가치를 설득력있는</span><span class="block">디자인으로
                             실현시켜
                             세상과 소통할 수 있도록 돕고 있습니다.</span>
@@ -120,7 +120,7 @@
             </div>
         </section>
 
-        <section class="m-keyword">
+        <!-- <section class="m-keyword">
             <div class="keyword1">
                 <p>하커라는 이름은, Heart(하트)와 Hacker(해커)를 합쳐 저의 의지를 담았습니다.
                     <br>첫눈에 마음을 사로잡는 디자인과 기술을 가진 전문가라는 의미입니다.
@@ -158,7 +158,7 @@
                     </div>
                 </li>
             </ul>
-        </section>
+        </section> -->
 
     </main>
 
