about.html url수정

--- a/about/about.html
+++ b/about/about.html
@@ -16,8 +16,8 @@
     <!-- og  -->
     <meta property="og:title" content="haker.jihee">
     <meta property="og:description" content="안녕하세요. 이지희입니다.">
-    <meta property="og:image" content="https://leejihi.github.io/portfolio/images/og.jpg">
-    <meta property="og:url" content="https://leejihi.github.io/portfolio/about/about">
+    <meta property="og:image" content="https://leejihi.github.io/jihee/images/og.jpg">
+    <meta property="og:url" content="https://leejihi.github.io/jihee/about/about">
 
     <!-- reset -->
     <link rel="stylesheet" href="../common/reset.css">
@@ -28,17 +28,12 @@
     <!-- pc 우선 -->
     <link rel="stylesheet" href="./about-style.css">
 
-    <!-- <link rel="stylesheet" href="./mobile.css" media="(width >=500px)">
-     테블릿 버전
-    <link rel="stylesheet" href="./tablet.css" media="(width >=700px)">
-    피씨 버전
-    <link rel="stylesheet" href="./pc.css" media="(width >=1000px)"> -->
-
     <!-- jQuery -->
     <script src="../common/jquery-3.7.0.min.js"></script>
     <!-- svg 이벤트 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/ScrollTrigger.min.js"></script>
+
     <!-- 내가 작성한 js -->
     <script defer src="./about.js"></script>
 </head>
@@ -48,7 +43,7 @@
     <header>
         <div class="h-nav">
             <div class="nav-title">
-                <h1><a href="https://leejihi.github.io/portfolio/index">지희로고</a></h1>
+                <h1><a href="https://leejihi.github.io/jihee">지희로고</a></h1>
                 <div id="toggle_btn" class="flex_wrap">
                     <div class="mobile_icon">
                         <span class="bar1 transit"></span>
@@ -60,12 +55,12 @@
 
             <div class="nav">
                 <menu class="global-gnb">
-                    <li><a href="https://leejihi.github.io/portfolio">Home</a></li>
-                    <li><a href="https://leejihi.github.io/portfolio/about/about">About me</a></li>
-                    <li><a href="https://leejihi.github.io/portfolio/#myWeb">Works</a></li>
+                    <li><a href="https://leejihi.github.io/jihee">Home</a></li>
+                    <li><a href="https://leejihi.github.io/jihee/about/about">About me</a></li>
+                    <li><a href="https://leejihi.github.io/jihee/#myWeb">Works</a></li>
                 </menu>
                 <ul class="h-sns">
-                    <li><a href="https://github.com/Leejihi/portfolio" target="_blank">깃허브로고</a></li>
+                    <li><a href="https://github.com/Leejihi/jihee" target="_blank">깃허브로고</a></li>
                     <li><a href="#">카카오톡로고</a></li>
                 </ul>
             </div>
@@ -172,7 +167,7 @@
             <ul class="all-git">
                 <li><img src="../images/GitHub_Logo.png" alt="깃허브로고"></li>
                 <li><a href="https://github.com/Leejihi/study_JH" target="_blank">git study</a></li>
-                <li><a href="https://github.com/Leejihi/portfolio" target="_blank">git portfolio</a></li>
+                <li><a href="https://github.com/Leejihi/jihee" target="_blank">git portfolio</a></li>
             </ul>
             <div class="f-logo">검정색상하커지희로고</div>
         </div>
