page-kt 메인배너 미디어쿼리 적용하여 100까지 이미지 사이즈 110% 수정

--- a/works/page-kt.html
+++ b/works/page-kt.html
@@ -37,7 +37,7 @@
         /* 미디어쿼리 1000까지 */
         @media screen and (max-width: 1000px) {
             .left .m-banner {
-                height: 85vh;
+                background: url(./images/kt1.gif) no-repeat 50% 80px / 110%;
             }
         }
     </style>
