page-kt 1200px까지 첫번째 이미지 상단으로 올림

--- a/works/page-kt.html
+++ b/works/page-kt.html
@@ -34,10 +34,10 @@
             background: url(./images/kt1.gif) no-repeat 50% 80px / 100%;
         }
 
-        /* 미디어쿼리 1000까지 */
-        @media screen and (max-width: 1000px) {
-            .left .m-banner {
-                background: url(./images/kt1.gif) no-repeat 50% 80px / 110%;
+        /* 미디어쿼리 1200까지 */
+        @media screen and (max-width: 1200px) {
+            .m-img img:first-child {
+                margin-top: -5vw;
             }
         }
     </style>
