page-kt 1500px까지 백그라운드 이미지 y축 100px로 변경

--- a/works/page-kt.html
+++ b/works/page-kt.html
@@ -36,8 +36,8 @@
 
         /* 미디어쿼리 1200까지 */
         @media screen and (max-width: 1500px) {
-            .m-img img:first-child {
-                margin-top: -5vw;
+            .left .m-banner {
+                background: url(./images/kt1.gif) no-repeat 50% 10vw / 100%;
             }
         }
     </style>
