page-fun.html 작성

--- a/works/page-fun.html
+++ b/works/page-fun.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>E.B.G 영어</title>
+    <title>네프랩</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="../common/favicon/favicon.ico" type="image/x-icon">
@@ -14,10 +14,10 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../common/favicon/favicon-16x16.png">
 
     <!-- og  -->
-    <meta property="og:title" content="E.B.G Branding">
-    <meta property="og:description" content="E.B.G 영어교습소 브랜딩">
-    <meta property="og:image" content="https://leejihi.github.io/jihee/works/images/ebg_og.png">
-    <meta property="og:url" content="https://leejihi.github.io/jihee/works/page-ebg">
+    <meta property="og:title" content="K.BRAIN PPT Design">
+    <meta property="og:description" content="케이브레인 데이터 역량강화 제안 PPT 디자인">
+    <meta property="og:image" content="https://leejihi.github.io/jihee/works/images/fun_og.png">
+    <meta property="og:url" content="https://leejihi.github.io/jihee/works/page-fun">
 
     <!-- reset -->
     <link rel="stylesheet" href="../common/reset.css">
@@ -29,15 +29,9 @@
     <style>
         .left .m-banner {
             width: 100%;
-            height: 93vh;
+            height: 90vh;
             text-indent: -999999px;
-            background: url(./images/ebg1.png) no-repeat 50% 80px / 100%;
-        }
-
-        .left .m-img img:nth-child(2),
-        .left .m-img img:nth-child(3),
-        .left .m-img img:nth-child(4) {
-            margin-bottom: 3vw;
+            background: url(./images/fun1.gif) no-repeat 50% 80px / 100%;
         }
     </style>
 </head>
@@ -71,7 +65,7 @@
         </div>
 
         <div class="sub-nav">
-            <p>Works<span class="nomarl"> > Branding</span></p>
+            <p>Works<span class="nomarl"> > PPT Design</span></p>
             <div class="sub-btn">
                 <div class="open-btn">Contact</div>
                 <img src="../images/contact.png" alt="컨텍 말주머니">
@@ -96,14 +90,14 @@
     <main>
         <!-- 메인 왼쪽 영역 -->
         <section class="left">
-            <div class="m-banner">이비지 영어 키비주얼</div>
+            <div class="m-banner">케이브레인 데이터 역량강화 교육 제안서 키비주얼</div>
 
             <div class="m-img">
-                <img src="./images/ebg2.png" alt="이비지 영어 교습소 로고">
-                <img src="./images/ebg3.png" alt="이비지 영어 교습소 캐릭터, 컬러 설명, 로고가 적용된 명함 이미지">
-                <img src="./images/ebg4.png" alt="이비지 영어 교습소 오픈 전단지">
-                <img src="./images/ebg5.png" alt="이비지 영어 교습소 오픈 전단지">
-                <img src="./images/ebg6.png" alt="이비지 영어 교습소 인테리어 랩핑">
+                <img src="./images/fun2.png" alt="피피티 디자인 포인트">
+                <img src="./images/fun3.png" alt="피피티 디자인 표지, 목차, 도입부">
+                <img src="./images/fun4.png" alt="피피티 디자인 데이터역량강화 교육 진행방향">
+                <img src="./images/fun5.png" alt="피피티 디자인 케이브레인 소개 및 끝인사">
+
             </div>
         </section>
 
@@ -111,31 +105,28 @@
         <section class="right">
             <div class="r-wrapper">
                 <div class="wrapper1">
-                    <p class="titleUp">Branding</p>
-                    <h4 class="titleUp">e.b.g 영어 교습소</h4>
-                    <p>E.B.G는 Express yourself, Be active, Gain more의 약자로
-                        <span class="block">영어로 나의 생각과 상상력을 표현할 수 있도록 아이 스스로가</span>
-                        <span class="block">게임을 하듯 영어를 익힐 수 있도록 돕는 교육커리큘럼을 갖고있는</span>
-                        <span class="block">영어 브랜드입니다. 아이를 닮은 둥근 느낌과 원색 색감을 살려</span>
-                        로고, 캐릭터, 인쇄디자인을 진행했습니다.
+                    <p class="titleUp">PPT Design</p>
+                    <h4>케이브레인 데이터 역량강화 교육 제안서</h4>
+                    <p>제안을 위한 분석, 전략, 운영방법을 체계적으로 전달할 수 있도록 집중도를
+                        <span class="block">높여 디자인이 완성되었습니다
+                            . 케이브레인의 로고 색상을 컬러 포인트로</span>
+                        <span class="block">하여 심플한 다이어그램, 픽토그램을 활용하여 내용을 쉽고 명확하게</span>
+                        전달 할 수 있도록 구성했습니다.
                     </p>
 
                     <div class="txt">
-                        <p><span class="bold">PROJECT</span>브랜드 런칭 / 작업기여도 100%</p>
-                        <p><span class="bold">작업일정</span>2023.01 ~ 2023.02</p>
-                        <p class="titleUp"><span class="bold">CONCEPT</span>#colorful #Round</p>
+                        <p><span class="bold">PROJECT</span>제안서 / 작업기여도 100%</p>
+                        <p><span class="bold">작업일정</span>23.02.08 ~ 23.02.13</p>
+                        <p class="titleUp"><span class="bold">CONCEPT</span>#가독성 #집중도 #블루</p>
                     </div>
                 </div>
-
-                <!-- <div class="link-box"><a href="https://leejihi.github.io/seoul-angmusae/" target="_blank">웹사이트 바로가기</a>
-                </div> -->
             </div>
 
             <div class="r-wrapper">
                 <div class="wrapper1">
                     <ul class="skill">
                         <li class="title">Skills</li>
-                        <li class="titleUp">Photoshop / illustration</li>
+                        <li class="titleUp">PowerPoint / illustration</li>
                         <li class="titleUp">graphics / Editing</li>
                     </ul>
 
@@ -143,7 +134,7 @@
                         <li class="title">Tools</li>
                         <li>
                             <ul class="img">
-                                <li><img src="./images/tool_photo.png" alt="포토샵 로고"></li>
+                                <li><img src="./images/tool_power.png" alt="파워포인트 로고"></li>
                                 <li><img src="./images/tool_illust.png" alt="일러스트 로고"></li>
                             </ul>
                         </li>
