index에 page-fun url 연결

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         </div>
 
                         <div class="js-carousel-cell cell05">
-                            <a href="#">
+                            <a href="https://leejihi.github.io/jihee/works/page-fun">
                                 <div class="ag-shop-card_box-wrap">
                                     <div class="ag-shop-card_box">
                                         <div class="ag-shop-card_body">
@@ -291,8 +291,8 @@
                                             <div class="ag-shop-card-footer_link"><img
                                                     src="https://rawcdn.githack.com/SochavaAG/example-mycode/master/pens/parallax-swipe/images/arrow.svg"
                                                     class="ag-shop-card-footer_arrow"></div>
-                                            <span class="ag-shop-card-footer_title">(주)펀앤조이 | 브랜딩</span>
-                                            <span class="ag-shop-card-footer_products">패키지, 상세페이지</span>
+                                            <span class="ag-shop-card-footer_title">K.BRAIN | PPT DESIGN</span>
+                                            <span class="ag-shop-card-footer_products">케이브레인 데이터 역량강화 교육 제안서</span>
                                         </div>
                                     </div>
                                 </div>
