index에 롤리슈브 배너 클릭 범위수정

--- a/index.html
+++ b/index.html
@@ -162,11 +162,12 @@
                     </a>
                 </div>
                 <div class="web web2">
-                    <a href="https://leejihi.github.io/jihee/works/page-rollyshube"></a>
-                    <div class="web-txt">
-                        <h3>ROLLY SHUBE</h3>
-                        <p>PRINTING</p>
-                    </div>
+                    <a href="https://leejihi.github.io/jihee/works/page-rollyshube">
+                        <div class="web-txt">
+                            <h3>ROLLY SHUBE</h3>
+                            <p>PRINTING</p>
+                        </div>
+                    </a>
                 </div>
             </div>
 
