page-tim.html 팀원커 웹사이트 url주소 변경

--- a/works/page-tim.html
+++ b/works/page-tim.html
@@ -420,7 +420,7 @@
                     </div>
                 </div>
 
-                <div class="link-box"><a href="https://team-oozz.github.io/team-oozz" target="_blank">웹사이트 바로가기</a>
+                <div class="link-box"><a href="https://leejihi.github.io/tim-walker" target="_blank">웹사이트 바로가기</a>
                 </div>
             </div>
 
@@ -446,8 +446,6 @@
             </div>
         </section>
     </main>
-
-    <!-- <div class="up-btn"><a href="#">위로</a></div> -->
 </body>
 
 </html>
