--- a/works/page-angmusae.html
+++ b/works/page-angmusae.html
@@ -16,8 +16,8 @@
     <!-- og  -->
     <meta property="og:title" content="haker.jihee Seoul-Angmusae">
     <meta property="og:description" content="반응형웹 서울앵무새 설명페이지입니다.">
-    <meta property="og:image" content="https://leejihi.github.io/portfolio/works/images/og-angmu.jpg">
-    <meta property="og:url" content="https://leejihi.github.io/portfolio/works/page-angmusae">
+    <meta property="og:image" content="https://leejihi.github.io/jihee/works/images/og-angmu.jpg">
+    <meta property="og:url" content="https://leejihi.github.io/jihee/works/page-angmusae">
 
     <!-- reset -->
     <link rel="stylesheet" href="../common/reset.css">
@@ -41,7 +41,7 @@
     <header>
         <div class="h-nav">
             <div class="nav-title">
-                <h1><a href="https://leejihi.github.io/portfolio">지희로고</a></h1>
+                <h1><a href="https://leejihi.github.io/jihee">지희로고</a></h1>
                 <div id="toggle_btn" class="flex_wrap">
                     <div class="mobile_icon">
                         <span class="bar1 transit"></span>
@@ -53,12 +53,12 @@
 
             <div class="nav">
                 <menu class="global-gnb">
-                    <li><a href="https://leejihi.github.io/portfolio">Home</a></li>
-                    <li><a href="https://leejihi.github.io/portfolio/about/about">About me</a></li>
-                    <li><a href="https://leejihi.github.io/portfolio/#myWeb">Works</a></li>
+                    <li><a href="https://leejihi.github.io/jihee">Home</a></li>
+                    <li><a href="https://leejihi.github.io/jihee/about/about">About me</a></li>
+                    <li><a href="https://leejihi.github.io/jihee/#myWeb">Works</a></li>
                 </menu>
                 <ul class="h-sns">
-                    <li><a href="https://github.com/Leejihi/portfolio" target="_blank">깃허브로고</a></li>
+                    <li><a href="https://github.com/Leejihi/jihee" target="_blank">깃허브로고</a></li>
                     <li><a href="#">카카오톡로고</a></li>
                 </ul>
             </div>
@@ -296,7 +296,7 @@
                     <ul class="all-git">
                         <li><img src="./images/GitHub_Logo_White.png" alt="깃허브로고"></li>
                         <li><a href="https://github.com/Leejihi/study_JH" target="_blank">git study</a></li>
-                        <li><a href="https://github.com/Leejihi/portfolio" target="_blank">git portfolio</a></li>
+                        <li><a href="https://github.com/Leejihi/jihee" target="_blank">git portfolio</a></li>
                     </ul>
                     <div class="f-logo">흰색하커지희로고</div>
                 </div>
