ktwiz, rollyshue 상세페이지 링크 연결

--- a/works/page-kt.html
+++ b/works/page-kt.html
@@ -120,6 +120,10 @@
                         <p class="titleUp"><span class="bold">CONCEPT</span>#Black #Red #passion</p>
                     </div>
                 </div>
+
+                <div class="link-box"><a href="https://www.ktwiz.co.kr/media/wiznews/152374?search.page=104"
+                        target="_blank">상세페이지 바로가기</a>
+                </div>
             </div>
 
             <div class="r-wrapper">
