--- a/works/page-rollyshube.html
+++ b/works/page-rollyshube.html
@@ -124,8 +124,9 @@
                     </div>
                 </div>
 
-                <!-- <div class="link-box"><a href="https://leejihi.github.io/seoul-angmusae/" target="_blank">웹사이트 바로가기</a>
-                </div> -->
+                <div class="link-box"><a href="https://smartstore.naver.com/neflab/products/5419125184"
+                        target="_blank">상세페이지 바로가기</a>
+                </div>
             </div>
 
             <div class="r-wrapper">
